# pandoc-df-thesis-template

./: .gitattributes  .github_changelog_generator  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  Makefile  Readme.md  Readme_Win32.md  TODO.md  package-lock.json  package.json  pandoc-watch.sh
.github/: PULL_REQUEST_TEMPLATE.md
.sass-cache/48679a3efc0a824d03dea3cd8c84e0da150730a0/: _alert.scssc  _background-variant.scssc  _badge.scssc  _border-radius.scssc  _box-shadow.scssc  _breakpoints.scssc  _buttons.scssc  _caret.scssc  _clearfix.scssc  _float.scssc  _forms.scssc  _gradients.scssc  _grid-framework.scssc  _grid.scssc  _hover.scssc  _image.scssc  _list-group.scssc  _lists.scssc  _nav-divider.scssc  _pagination.scssc  _reset-text.scssc  _resize.scssc  _screen-reader.scssc  _size.scssc  _table-row.scssc  _text-emphasis.scssc  _text-hide.scssc  _text-truncate.scssc  _transition.scssc  _visibility.scssc
.sass-cache/4f9e70911732a930bd7329357dc17d7f761b45c1/: _alert.scssc  _buttons.scssc  _card.scssc  _code.scssc  _functions.scssc  _grid.scssc  _images.scssc  _media.scssc  _mixins.scssc  _nav.scssc  _navbar.scssc  _print.scssc  _reboot.scssc  _tables.scssc  _type.scssc  _utilities.scssc  _variables.scssc
.sass-cache/5bde662d26063ffd71c1226072c08aa741910aab/: _align.scssc  _background.scssc  _borders.scssc  _clearfix.scssc  _display.scssc  _embed.scssc  _flex.scssc  _float.scssc  _position.scssc  _screenreaders.scssc  _shadows.scssc  _sizing.scssc  _spacing.scssc  _text.scssc  _visibility.scssc
.sass-cache/bf3c1adec1fa7e04e92e3df61cddbff0e7442f3c/: _common.scssc  _docbook.scssc  _epub.scssc  _html.scssc  _layout.scssc  _variables.scssc
.sass-cache/f236c09572d819d1c3c61c6fd14a0c63308ba662/: pandoc_thesis.scssc  pandoc_thesis_docbook.scssc  pandoc_thesis_epub.scssc  pandoc_thesis_print.scssc
_data/: glossaries.pp  html.pp  latex.pp  macros.pp  metadata.yml  variables.yml  xml.pp
_layouts/: Thesis-extend-ieee-style.csl  Thesis-ieee-style.csl  pandoc-df-thesis-macros.sty  pandoc-df-thesis-theme.sty  pandoc-df-thesis.sty  pandoc-thesis_macros.tex  template.docbook5  template.docx  template.epub3  template.html5  template.latex  template.odt
_layouts/jekyll/: Gemfile  _config.yml
_layouts/odt/: content.xml  meta.xml  settings.xml  styles.xml
_layouts/xsl/: glossary.xsl  html5.xsl  inline.xsl  layout.xsl  param.xsl  titlepage.xsl
_md/: 02_acknowledgements.md  10_chapter1.md  11_firstchapter.md  12_secondchapter.md  20_appendix.md  20_chapter2.md  80_appendixA.md  91_appendixB.md  98_references.md
_sass/: _docbook.scss  _epub.scss  _html.scss  _layout.scss
cmake/: Pandoc-thesis-template.cmake
(+13 files in other folders)
